fix animation overflow

--- a/client/src/app/frontpage.css
+++ b/client/src/app/frontpage.css
@@ -1,6 +1,7 @@
 .frontpage-main{
     width: 100vw;
     max-width: 100%; /* offset scrollbar width */
+    overflow: hidden;
 }
 .cover-wrapper{
     width: 100%;
